fix(columns): Top alignmeent
- Improved top alignment of navi, Title and TOC with negative values to make up for text line-height

--- a/themes/hugo-docs/assets/elements/article.scss
+++ b/themes/hugo-docs/assets/elements/article.scss
@@ -13,6 +13,10 @@
   &__title {
     position: relative;
     margin-top: 0;
+
+    &:first-child {
+      margin-top: -5px; // -5px to make up for line-height related superfluous space on top of title
+    }
   }
 
   &__content {
